final commit. added warning in details

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="162"
+    android:viewportHeight="173">
+  <group android:scaleX="0.49630058"
+      android:scaleY="0.53"
+      android:translateX="40.799652"
+      android:translateY="40.655">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M34.46,169.32C23.44,162.58 16.15,152.81 10.71,141.53C4.58,128.82 1.3,115.36 0.3,101.29C-1.47,76.29 4.58,53.31 18.09,32.33C25.39,20.99 34.35,11.2 46.43,4.71C51.66,1.9 57.21,0.09 63.22,0C63.56,-0 63.9,0 64.33,0.36C63.44,0.76 62.56,1.17 61.67,1.57C47.26,8.05 34.75,17.01 25.18,29.75C18.92,38.09 14.65,47.38 12.27,57.53C11.7,59.93 12.62,61.76 14.57,62.23C16.58,62.73 18.34,61.62 18.88,59.3C24.22,36.33 38.82,20.92 59.18,10.42C64.7,7.58 70.7,5.65 76.53,3.45C77.44,3.11 78.82,3.31 79.71,3.77C88.53,8.38 91.85,16.97 88.94,27.31C86.99,34.24 83.22,40.14 78.04,45C71.93,50.75 65.51,56.18 59.16,61.67C43.93,74.8 34.62,91.47 30.06,110.86C26.69,125.14 26.5,139.52 30.02,153.8C31.81,161.07 35.23,167.48 41.46,172.05C41.54,172.11 41.56,172.26 41.91,173C40.33,172.27 39.2,171.79 38.1,171.24C36.91,170.65 35.76,170.01 34.46,169.32Z"
+        android:fillColor="#37AAE1"/>
+    <path
+        android:pathData="M44.14,163.41C39.89,156.46 37.89,148.91 37.27,141.05C35.59,119.79 41.06,100.37 53.12,82.88C63.9,67.25 78.35,56.53 96.83,51.58C104.14,49.62 111.44,49.42 118.53,52.54C131.91,58.43 133.68,73.66 122.16,83.23C116.96,87.55 110.9,90.14 104.61,92.32C97.41,94.83 90.01,96.86 83.45,100.94C63.84,113.13 52,130.64 47.92,153.34C46.96,158.7 47.5,164.03 49.83,169.07C50.03,169.5 50.09,169.99 50.21,170.45C50.02,170.57 49.83,170.69 49.64,170.81C47.83,168.38 46.02,165.96 44.14,163.41Z"
+        android:fillColor="#37A9E1"/>
+    <path
+        android:pathData="M88.48,140.47C79.65,143.78 71.93,148.56 65.4,155.2C61.37,159.31 58.28,163.88 57.87,169.84C57.85,170.14 57.7,170.43 57.6,170.79C55.87,165.72 56.22,158.03 58.58,151.42C63.33,138.13 71.99,127.85 83.18,119.51C94.35,111.19 107.04,107.15 120.75,105.85C128.55,105.1 136.28,105.35 143.77,107.87C152.2,110.71 158.17,116.06 160.47,124.94C162.84,134.13 157.55,141.29 148.04,141.93C140.61,142.43 133.53,140.58 126.36,139.14C121.06,138.08 115.69,137.04 110.31,136.8C102.9,136.47 95.62,137.86 88.48,140.47Z"
+        android:fillColor="#37AAE1"/>
+  </group>
 </vector>
